--- a/css/style.css
+++ b/css/style.css
@@ -18,8 +18,9 @@
 
     
 }
-body{background-color: var(--blist-main);
-
+body{
+    background-color: var(--blist-main);
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 #logo{
     display: inline-block;
@@ -38,14 +39,77 @@ body{background-color: var(--blist-main);
     margin-top: 2rem;
 }
 .contein{
-    background-color: var(--blist-white);
+
+    background-color: var(--blist-main);
     width: 80%;
     margin: auto;
 }
 
-
+/* main region */
 #header-list{
-    background-color: blue;
+    background-color: var(--blist-white);
     padding: 1rem 0 0.5rem 2rem;
     border-radius: 1rem 1rem 0 0;
+}
+#main-list{
+    background-color: purple;
+    margin: 5px 0;
+    padding: 1rem 0 2rem;
+    border-radius: 0 0 1rem 1rem;
+}
+
+.button{
+    border-radius: 5px;
+    border: none;
+    font-size: 0.8rem;
+    padding: 5px 10px;
+
+}
+
+
+
+.Task{
+    background-color: var(--blist-blue);
+    color: white;
+}
+.Section{
+    background-color: #ffffff;
+    color: grey;
+    border: 1px solid gray
+
+}
+/* endmain region */
+
+ul{
+    list-style-type: square ;
+}
+.HeadList{
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+.notification{
+    margin: 2px 10px;
+    display: inline-block;
+    font-size: 0.7rem;
+    padding: 2px 5px;
+    border-radius: 5px;
+    color: #ffffff;
+}
+.Editorial{
+    background-color: var(--blist-blue);
+}
+.Q1Goals{
+    background-color: var(--blist-purple);
+}
+.Recruiting{
+    background-color: var(--blist-salvia);
+}
+.Mobile{
+    background-color: var(--blist-orange);
+}
+.Website{
+    background-color: var(--blist-palered);
+}
+.Sales{
+    background-color: var(--blist-green);
 }
