--- a/css/style.css
+++ b/css/style.css
@@ -28,12 +28,13 @@ body{
 }
 #Title{
     display: inline-block;
-    inline-size: auto;
+    inline-size: 3rem;
     vertical-align: middle;
 }
 #app_header{
     background-color: var(--blist-white);
     padding: 0.5rem;
+    height: 3rem;
 
 }
 
@@ -54,7 +55,7 @@ body{
     border-radius: 1rem 1rem 0 0;
 }
 #main-list{
-    background-color: purple;
+    background-color: var(--blist-white);
     margin: 5px 0;
     padding: 1rem 0 2rem;
     border-radius: 0 0 1rem 1rem;
@@ -81,9 +82,16 @@ body{
 
 }
 /* endmain region */
+/* ul{
+list-style-image:url(https://img.icons8.com/?size=100&id=11695&format=png&color=40C057) ;
+font-size: x-small;
 
-ul{
-    list-style-type: square ;
+} */
+::marker{
+    font-size: small;
+}
+
+.menu{
 }
 .HeadList{
     font-size: 1.5rem;
