--- a/css/style.css
+++ b/css/style.css
@@ -22,24 +22,32 @@ body{
     background-color: var(--blist-main);
     font-family:roboto;
 }
+.LogoTitle{
+    width: 80%;
+    margin: auto;
+}
 #logo{
     display: inline-block;
     vertical-align: middle;
+    height: 100%;
 }
 #Title{
     display: inline-block;
-    inline-size: 3rem;
+    /* inline-size: 3rem; */
     vertical-align: middle;
+    font-size: 2rem;
+    font-weight: bold;
 }
 #app_header{
     background-color: var(--blist-white);
-    padding: 0.5rem;
-    height: 3rem;
+    padding: 10px;
+    margin: 0;
+    width: 80%;
 
 }
 
 #app_main{
-    margin-top: 2rem;
+    margin-top: 25px;
 }
 .contein{
 
@@ -48,7 +56,7 @@ body{
     margin: auto;
 }
 
-/* main region */
+/* #main region */
 #header-list{
     background-color: var(--blist-white);
     padding: 1rem 0 0.5rem 2rem;
@@ -74,6 +82,7 @@ body{
 .Task{
     background-color: var(--blist-blue);
     color: white;
+    border: 1px solid var(--blist-blue);
 }
 .Section{
     background-color: #ffffff;
@@ -81,14 +90,29 @@ body{
     border: 1px solid gray
 
 }
-/* endmain region */
-/* ul{
-list-style-image:url(https://img.icons8.com/?size=100&id=11695&format=png&color=40C057) ;
-font-size: x-small;
-
-} */
-::marker{
-    font-size: small;
+/* #endmain region */
+ul li{
+    list-style: none;
+    margin:10px 0;
+}
+.icon{
+    display: inline-block;
+    border: 1px solid;
+    height: 1.25rem;
+    width: 1.25rem;
+    text-align: center;
+    line-height: 1.25rem;
+    border-radius: 50%;
+    margin-right: .5rem;
+    font-size: .75rem;
+}
+.cross{
+    color: red;
+    /* font-weight: bold; */
+}
+.check{
+    color: green;
+    /* font-weight: bold; */
 }
 
 .menu{
@@ -101,7 +125,7 @@ font-size: x-small;
     margin: 2px 10px;
     display: inline-block;
     font-size: 0.7rem;
-    padding: 2px 5px;
+    padding: 5px 10px;
     border-radius: 5px;
     color: #ffffff;
 }
